<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewBackMain"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_generate"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text18Sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewBackMain"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buttonToolbar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_back_premium"
            android:contentDescription="@string/share"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/premium"
            android:textColor="@color/white"
            android:textSize="@dimen/txt14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_star_white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>